# Industrial-IoT-Alert-Triage

./: .gitignore  Dockerfile  JURY_EVALUATION_RUBRIC.md  README.md  __init__.py  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
scripts/: pre_submit_check.sh
server/: README.md  __init__.py  app.py  environment.py
